improved code completion